--- a/src/app/police/crime-report/crime-report.page.html
+++ b/src/app/police/crime-report/crime-report.page.html
@@ -1,12 +1,52 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="danger">
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
-    <ion-title>crimeReport</ion-title>
+    <ion-title>Report a Crime</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+   <ion-card>
+     <ion-card-header>
+       <ion-card-title>Report a Crime</ion-card-title>
+     </ion-card-header>
+     <ion-card-content>
+       <ion-list>
+         <ion-item>
+           <ion-label position="floating">Enter Information</ion-label>
+           <ion-textarea></ion-textarea>
+         </ion-item>
+         <ion-item>
+           <ion-label position="floating">Enter Location</ion-label>
+           <ion-textarea></ion-textarea>
+         </ion-item>
+       </ion-list>
+       <ion-item-divider>
+         Upload proof(s)
+       </ion-item-divider>
+       <ion-button fill="clear" expand="full" color="danger" (click)="selectImage()">
+         <ion-icon name="camera" slot="start"></ion-icon>
+         Select Image
+       </ion-button>
+       <h3 *ngIf="images.length === 0" text-center>Please select Image</h3>
+       <ion-grid>
+         <ion-row>
+           <ion-col size="6" *ngFor="let img of images; index as pos">
+             <ion-card>
+               <ion-img [src]="img.path"></ion-img>
+               <ion-button slot="end" fill="clear" (click)="deleteImg(img, pos)">
+                 <ion-icon slot="icon-only" name="trash"></ion-icon>
+               </ion-button>
+             </ion-card>
+           </ion-col>
+         </ion-row>
+       </ion-grid>
+       <ion-button expand="full" color="danger">
+         Submit Report
+       </ion-button>
+     </ion-card-content>
+   </ion-card>
 
 </ion-content>
